--- a/css/calendar.css
+++ b/css/calendar.css
@@ -5,19 +5,20 @@ body{
   color:rgb(6, 6, 88)
 }
 .jumbotron{
-  margin-top: 30px;
-  border-radius: 30px !important;
-  height:300px;
+  
   margin-bottom: 100px !important;
+  
 }
 
 #instructor-img{
-  width:250px;
-  height:200px;
+  width:300px;
+  height:300px;
 }
 #instructor-name{
-  color:chartreuse;
+  color:black;
   text-align:center;
+  padding: 10px;
+  font-size:35px;
 }
 #left-stuff{
   padding-left: 100px;
@@ -161,4 +162,11 @@ h3{
 
 .confirm{
   margin-top:200px;
+}
+
+#instr_title{
+  font-weight:bold;
+  font-size:60px;
+  color:rgb(0, 0, 0) !important;
+  padding:5px;
 }
