--- a/css/calendar.css
+++ b/css/calendar.css
@@ -19,7 +19,7 @@ body {
 }
 
 h3 {
-    padding-bottom: 30px;
+    padding-bottom: 15px;
 }
 
 .date-picker {
@@ -112,7 +112,7 @@ h3 {
 
 .button-18 {
     align-items: center;
-    background-color: #0A66C2;
+    background-color: #0a0a0a;
     border: 0;
     border-radius: 80px;
     box-sizing: border-box;
@@ -142,7 +142,7 @@ h3 {
 
 .button-18:hover,
 .button-18:focus {
-    background-color: #58c70e;
+    background-color: #0A66C2;
     color: #ffffff;
 }
 
