--- a/css/main.css
+++ b/css/main.css
@@ -427,9 +427,9 @@ Input, textarea : 15px/1.7 'Roboto-Regular', Arial, sans-serif;
 }
 
 .logo img {
-  max-width: calc(100% - 20px);
-  max-height: 100%;
-  position:absolute;
+  height:90px;
+  width:350px;
+  position:relative;
   top: 0; 
   left: 0; 
   bottom: 0;
