--- a/public/css/flexnav.css
+++ b/public/css/flexnav.css
@@ -85,10 +85,11 @@ body {
   flex: 1;
   color: #444;
   text-decoration: none;
-  font-weight: 600;
-  font-size: 1.2rem;
+  font-weight: 600 !important;
+  font-size: 20px !important;
   -webkit-transition: 200ms;
   transition: 200ms;
+  justify-content: center !important;
 }
 
 .nav-link:hover {
