--- a/public/css/flexnav.css
+++ b/public/css/flexnav.css
@@ -152,7 +152,11 @@ body {
     background-color:	#D3D3D3 !important;
     color: black !important;
     justify-content: center !important;
-    z-index:1000 !important;
+ 
+  }
+
+  #drop{
+    height:500px;
   }
 }
 /* END MOBILE MENU */
